chore: update .gitignore to include new file patterns and directories
- Added *.mjs to ignore JavaScript module files.
- Included supabase/.temp/ and /prisma/ directories to ignore temporary and configuration files related to Supabase and Prisma.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 *.zip
 *.rar
 *.7z
+*.mjs
 
 # debug
 npm-debug.log*
@@ -58,4 +59,8 @@ next-env.d.ts
 ehthumbs.db
 Thumbs.db
 
-.vercel
+# Supabase
+supabase/.temp/
+
+# Prisma
+/prisma/
