--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
