--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.507.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
